--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="Floatingcard.css">
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="RegistrationComponent.css">
+    <!--<link rel="stylesheet" href="RegistrationComponent.css">-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
